--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
+    "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/vite": "^4.1.15",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
